Add Information CRUD

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ AccountSeller_BE/AccountSeller.Presentation/obj
 AccountSeller_BE/AccountSeller.Presentation/bin
 AccountSeller_BE/AccountSeller.Presentation/AccountSeller
 AccountSeller_BE/AccountSeller.Presentation/AccountSeller
+AccountSeller_BE/AccountSeller.Presentation/AccountSeller
