--- a/AccountSeller_BE/AccountSeller.Presentation/Properties/launchSettings.json
+++ b/AccountSeller_BE/AccountSeller.Presentation/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "KeySee": {
+    "AccountSeller": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
