--- a/AccountSeller_BE/AccountSeller.Presentation/appsettings.Development.json
+++ b/AccountSeller_BE/AccountSeller.Presentation/appsettings.Development.json
@@ -11,7 +11,7 @@
   },
   "LogFilePath": "AccountSeller/logs.log",
   "FtpServer": {
-    "Directory": "E:/AccountSeller/Files/"
+    "Directory": "../AccountSeller/Files/"
   },
   "SmtpMailConfig": {
     "Host": "",
